server/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxygram-server
  labels:
    app: proxygram-server
spec:
  selector:
    matchLabels:
      app: proxygram-server
  template:
    metadata:
      labels:
        app: proxygram-server
    spec:
      containers:
        - name: proxygram-server
          image: ghcr.io/proxy-gram/server:v0.0.38
          imagePullPolicy: Always
      restartPolicy: Always
      imagePullSecrets:
        - name: ghcr-login-secret
