server/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: proxygram-server
  labels:
    app: proxygram-server
spec:
  selector:
    app: proxygram-server
  ports:
    - name: default
      protocol: TCP
      port: 80
      targetPort: 3000
    - name: proxied-tcp-9000
      port: 9000
      targetPort: 3300
      protocol: TCP
